--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="theme-color" content="#111827" />
-    <link rel="icon" href="/logo.png" />
+    <link rel="icon" href="/logo.svg" />
   </head>
   <body class="bg-[#0D1B2A] text-white">
     <div id="root"></div>
